--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Neverland Diaries
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about the good, the bad, and the ugly of Disney and other childhood magic makers.
 baseurl: "/diaries" # the subpath of your site, e.g. /blog
-url: "http://notquiteneverland.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://main.d2j7wu3l8njze7.amplifyapp.com/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
